--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
   },
   "license": "MIT",
   "dependencies": {
+    "bootstrap": "^4.4.1",
+    "jquery": "^3.4.1",
+    "popper.js": "^1.16.1",
     "react": "^16.13.0",
-    "react-dom": "^16.13.0"
+    "react-dom": "^16.13.0",
+    "reactstrap": "^8.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.7",
